Documented JVM settings in forked Java test processes.
This update is in response to this thread: https://groups.google.com/forum/#!msg/play-framework/SqXk7EQgMwk/DxJaWMVlzcoJ